Read additionalProps from .properties files used in drools
Issue-ID: POLICY-5120
Change-Id: I2cb5cae3e6456f32a72e4b2bda0819b3eb77653e
Signed-off-by: adheli.tavares <adheli.tavares@est.tech>